# undertone-ai

./: .gitignore  CLAUDE.md  COMMIT_CONVENTIONS.md  DEV_JOURNAL.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml
evals/: cases.jsonl  run_cleanup_eval.py
src/undertone/: __init__.py  app.py  cleanup.py  config.py  hotkey.py  hud.py  icons.py  injector.py  long_session.py  recorder.py  sounds.py  transcriber.py
src/whisperflow/: __init__.py  app.py  cleanup.py  config.py  hotkey.py  injector.py  recorder.py
tests/: test_cleanup.py  test_guards.py  test_long_session.py  test_recorder.py  test_sounds.py  test_transcriber.py
